# janssqlitekernel

./: README.md  pyproject.toml
example/: example.ipynb
janssqlitekernel/: kernel.json
src/janssqlitekernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
