[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jansmongodbkernel"
version = "0.0.2"
authors = [
  { name="Jan Arman Parpin", email="is@hidden.com" },
]
description = "A jupyter mongodb kernel."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jans-code/jansmongodbkernel"
"Bug Tracker" = "https://github.com/jans-code/jansmongodbkernel/issues"